--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1><span style="text-decoration: underline;"><strong>HELLO WORLD</strong></span></h1>
+<!DOCTYPE html>
+  <html>
+    <style>
+      body {
+        text-align: center;
+      }
+    </style>
+    <body>
+      <h1><span style="text-decoration: underline;"><strong>HELLO WORLD</strong></span></h1>
+    </body>
