--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
   <html>
-    <style>
-      body {
-        text-align: center;
-      }
-    </style>
     <body>
       <h1><span style="text-decoration: underline;"><strong>HELLO WORLD</strong></span></h1>
+      <p> This is my soon to be personal website </p>
+      <a href="https://www.facebook.com/public/Landon-Halouska">My facebook!!</a>
     </body>
