--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
   <html>
+    <style>
+      body {
+        text-align: center;
+      }
+    </style>
     <body>
       <h1><span style="text-decoration: underline;"><strong>HELLO WORLD</strong></span></h1>
       <p> This is my soon to be personal website </p>
