--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <style>
       body {
         text-align: center;
-        text-background: blue;
+        background-color: yellow;
+        
       }
     </style>
     <body>
