--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
   <html>
+    <head><title>"LANDON!</title></head>
     <style>
       body {
         text-align: center;
-        background-color: yellow;
-        
+        background-color: yellow;   
       }
     </style>
     <body>
