--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       }
     </style>
     <body>
-      <h1><span style="text-decoration: underline;"><strong>HELLO WORLD</strong></span></h1>
+      <div class="heading">
+        <h1><span style="text-decoration: underline;"><strong>HELLO WORLD</strong></span></h1>
+      </div>
       <p> This is my soon to be personal website </p>
       <a href="https://www.facebook.com/public/Landon-Halouska">My facebook!!</a>
     </body>
+  </html>
