--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
   <html>
-    <head><title>"LANDON!</title></head>
+    <head>
+      <title>"LANDON!</title>
+    <link>
+    </head>
     <style>
       body {
         text-align: center;
@@ -11,7 +14,12 @@
       <div class="heading">
         <h1><span style="text-decoration: underline;"><strong>HELLO WORLD</strong></span></h1>
       </div>
-      <p> This is my soon to be personal website </p>
-      <a href="https://www.facebook.com/public/Landon-Halouska">My facebook!!</a>
+      <div class="body">
+        <p> This is my soon to be personal website </p>
+      </div>
+      <div class="contact">
+        <a href="https://www.facebook.com/public/Landon-Halouska">My facebook!!</a>
+      </div>
+      
     </body>
   </html>
