--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </style>
     <body>
       <div class="heading">
-        <h1><span style="text-decoration: underline;"><strong>HELLO WORLD</strong></span></h1>
+        <h1><span style="text-decoration: underline;"><strong>HELLO bcc
+          WORLD</strong></span></h1>
       </div>
       <div class="body">
         <p> This is my soon to be personal website </p>
