added link for css file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <title>"LANDON!</title>
-    <link>
+      <link type="text/css" rel="stylesheet" href=stylesheets/style.css />
     </head>
     <style>
       body {
@@ -12,15 +12,13 @@
     </style>
     <body>
       <div class="heading">
-        <h1><span style="text-decoration: underline;"><strong>HELLO bcc
-          WORLD</strong></span></h1>
+        <h1><strong>HELLO WORLD</strong></h1>
       </div>
       <div class="body">
         <p> This is my soon to be personal website </p>
       </div>
       <div class="contact">
         <a href="https://www.facebook.com/public/Landon-Halouska">My facebook!!</a>
-      </div>
-      
+      </div>  
     </body>
   </html>
