--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
   <html>
     <head>
       <title>"LANDON!</title>
-      <link type="text/css" rel="stylesheet" href=stylesheets/style.css />
+      <link type="text/css" rel="stylesheet" href="doom2286.github.io/Style.css" />    
     </head>
-    <style>
-      body {
-        text-align: center;
-        background-color: yellow;   
-      }
-    </style>
     <body>
       <div class="heading">
         <h1><strong>HELLO WORLD</strong></h1>
