--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
       <div class="heading">
-        <h1><strong>HELLO WORLD</strong></h1>
+        <h1><strong>Landon Halouska</strong></h1>
       </div>
       <div class="body">
-        <p> This is my soon to be personal website </p>
+        <p> This is my personal website </p>
       </div>
       <div class="contact">
         <a href="https://www.facebook.com/public/Landon-Halouska">My facebook!!</a>
