--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     
     <body>
       <div class="main-heading">
-        <h1><strong>Landon Halouska</strong></h1>
-        <h3><strong>Email:"mail@landonhalouska.com"</h3></strong>
+        <div class="container">
+          <h1><strong>Landon Halouska</strong></h1>
+          <h3><strong>Email:"mail@landonhalouska.com"</h3></strong>
+        </div>
       </div>
       <div class="body">
         <p> This is my personal website </p>
