--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         </div>
       </div>
       <div class="body">
-        <p> This is my personal website </p>
+        <p> navigation button 1</p>
+        <p> navigation button 2</p>
+        <p> navigation button 3</p>
+        <p> navigation button 4</p>
       </div>
       <div class="contact">
         <a href="https://www.facebook.com/public/Landon-Halouska">My facebook!!</a>
