--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="body">
-        <p> navigation button 1</p>
+        <p class=nav1> navigation button 1</p>
         <p> navigation button 2</p>
         <p> navigation button 3</p>
         <p> navigation button 4</p>
