--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
           <h3><strong>Email:"mail@landonhalouska.com"</h3></strong>
         </div>
       </div>
-      <div class="body">
-        <p class=nav1> navigation button 1</p>
-        <p> navigation button 2</p>
-        <p> navigation button 3</p>
-        <p> navigation button 4</p>
-      </div>
+      <div class="navigation">
+        <div id="nbutton">
+          <p> navigation button 1</p>
+        </div>
+        <div id="nbutton">
+          <p> navigation button 2</p>
+        </div>
+        <div id="nbutton">
+          <p> navigation button 3</p>
+        </div>
+        <div id="nbutton">
+          <p> navigation button 4</p>
+        </div>
       <div class="contact">
         <a href="https://www.facebook.com/public/Landon-Halouska">My facebook!!</a>
       </div>  
