--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="nbutton">
           <p> navigation button 4</p>
         </div>
+      </div>
       <div class="contact">
         <a href="https://www.facebook.com/public/Landon-Halouska">My facebook!!</a>
       </div>  
