--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         </div>
       </div>
       <div class="navigation">
-        <div id="nbutton">
+        <div class="nbutton">
           <p> navigation button 1</p>
         </div>
-        <div id="nbutton">
+        <div class="nbutton">
           <p> navigation button 2</p>
         </div>
-        <div id="nbutton">
+        <div class="nbutton">
           <p> navigation button 3</p>
         </div>
-        <div id="nbutton">
+        <div class="nbutton">
           <p> navigation button 4</p>
         </div>
       </div> 
