--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h3><strong>Email:"mail@landonhalouska.com"</h3></strong>
         </div>
       </div>
-      <div class="navigation">
+      <div id="navigationp">
         <div class="nbutton">
           <p> navigation button 1</p>
         </div>
