--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <div class="nbutton">
           <p> navigation button 4</p>
         </div>
-      </div> 
+      </div>
+      <div id="footer">
+      <h3>Contact me!<h3>
+      </div>
     </body>
         
   </html>
