--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       </div>
       <div id="navigationp">
         <div class="nbutton">
-          <p> navigation button 1</p>
+          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="200" height="200"></img>
         </div>
         <div class="nbutton">
-          <p> navigation button 2</p>
+          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="200" height="200"></img>
         </div>
         <div class="nbutton">
-          <p> navigation button 3</p>
+          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="200" height="200"></img>
         </div>
         <div class="nbutton">
-          <p> navigation button 4</p>
+          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="200" height="200"></img>
         </div>
       </div>
       <div id="footer">
