--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="200" height="200"></img>
         </div>
       </div>
-      <div id="footer">
+      <div class="footer">
       <h3>Contact me!<h3>
       </div>
     </body>
