--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="footer">
-      <h3>Contact me!<h3>
+      <h3>Contact me!</h3>
       </div>
     </body>
         
