--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
       </div>
       <div id="navigationp">
         <div class="nbutton">
-          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="200" height="200"></img>
+          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="150" height="150"></img>
+        <p>page title</p>
         </div>
         <div class="nbutton">
-          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="200" height="200"></img>
-        </div>
+          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="150" height="150"></img>
+          <p>page title</p>
+      </div>
         <div class="nbutton">
-          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="200" height="200"></img>
-        </div>
+          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="150" height="150"></img>
+          <p>page title</p>
+      </div>
         <div class="nbutton">
-          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="200" height="200"></img>
-        </div>
+          <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="150" height="150"></img>
+          <p>page title</p>
+      </div>
       </div>
       <div class="footer">
       <h3>Contact me!</h3>
