--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       </div>
       <div class="footer">
       <h3>Contact me!</h3>
+        <p class=contact >mail@landonhalouska.com</p>
+        <p class=contact >000-000-0000</p>
+        
       </div>
     </body>
         
