--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="footer" style="height: 61px;">
+    <div id="footer" style="height: 61px;">
       <div class="contact">
         <h3>Contact me!</h3>
       </div>
