--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div id="navigationp">
 			<div class="nbutton">
-				<a href=http://landonhalouska.com/Alyssa.gora16-gmail.com/index.html /> <img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="150" height="150"></img>
+				<a href=http://landonhalouska.com/Alyssa.gora16-gmail.com/index.html /> <img src="https://drive.google.com/uc?export=download&id=18_NSmeCIvDX-EFmlmKov_9NQ0IgINa1iKFHL06KmRBU" width="150" height="150"></img>
 			<p>Alyssasimage.com</p></a>
 			</div>
 			<div class="nbutton">
