--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 			</div>
 		</div>
 		<div id="navigationp">
-			<div class="nbutton">
-				<a href=http://landonhalouska.com/Alyssa.gora16-gmail.com/index.html target="0" /> <img src="https://i.imgur.com/gk8AYnU.png" width="150" height="150"></img>
-			<p>Alyssasimage.com</p></a>
-			</div>
+			<a class="nbutton" href=http://landonhalouska.com/Alyssa.gora16-gmail.com/index.html target="0" />
+			<img src="https://i.imgur.com/gk8AYnU.png" width="150" height="150"></img>
+			<p>Alyssasimage.com</p>
+			</a>
+			
 			<div class="nbutton">
 				<img src="https://cdn2.iconfinder.com/data/icons/technology-straight-line/128/SVG_LINE_TECHNOLOGY-01-256.png" width="150" height="150"></img>
 				<p>page title</p>
