--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>proficient with microsoft excel, word and power</li>
                 <li>able to handle cash counts and inventory</li>
                 <li>Great at customer service and discovering customer interest and needs.</li>
-                </li>
+		<li>has built person pc and has built mining pc with p+ gpus.</li>
             </ul>
         </div>
         
