--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 SKILLS
             </h1>
             <ul>
-                <li>Able to replace lcd assebmlies on iphone 5,6,6s,7,8 samsung s5,note5</li>
+                <li>Able to replace lcd assemblies on iphone 5,6,6s,7,8 samsung s5,note5</li>
                 <li>Proficient with microsoft Excel, Word and Power</li>
                 <li>Able to handle cash counts and inventory</li>
                 <li>Great at customer service and discovering customer interest and needs.</li>
